# AdventOfCode2026

./: .clangd  .clangformat  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt
src/day1/: CMakeLists.txt  day1.cpp
src/day2/: CMakeLists.txt  day2.cpp
src/day3/: CMakeLists.txt
src/utils/: utils.hpp
